--- a/index.html
+++ b/index.html
@@ -360,10 +360,10 @@
                 </ul>
               </address>
             </div>
-          </div>
-          <div class="footer-socials">
-            <h3 class="h3 logo-2">Dołącz do nas</h3>
-            <div class="we-svg footer-sm">
+            </div>
+            <div class="footer-socials">
+              <h3 class="h3 logo-2">Dołącz do nas</h3>
+              <div class="we-svg footer-sm">
                     <div class="svg-circle footer-svg">
                   <svg width="20px" height="20px">
                 <use xlink:href="./images/icons.svg#icon-instagram-2"></use>
@@ -380,8 +380,19 @@
                   <svg width="20px" height="20px">
                 <use xlink:href="./images/icons.svg#icon-linkedin-1"></use>
               </svg></div>
-                  </div>
-                  </div>
+              </div>
+            </div>
+            <div class="newsletter">
+              <form>
+              <h3 class="h3 logo-2">Zapisz się do newslettera</h3>
+              <form name="signup_form" autocomplete="on" novalidate>
+                <label for="user_email"></label>
+                  <input class="email-input" type="email" name="email" id="user_email" placeholder="E-mail"/>
+              <button class="send" type="submit">Zapisz się<svg class="footer-svg-2" width="24px" height="24px">
+              <use xlink:href="./images/icons.svg#icon-send"></use>
+            </svg></button>
+            </form>
+            </div>
           </div>
         </div>
       </div>
