--- a/index.html
+++ b/index.html
@@ -404,6 +404,54 @@
               <use xlink:href="./images/icons.svg#icon-Vector"></use>
             </svg>
         </button>
+         <div class="modal-form">
+            <form>
+              <p class="modal-h3">Zostaw swoje dane w formularzu poniżej</p>
+              <form name="signup_form" autocomplete="on" novalidate>
+                <label>
+                  <p class="modal-p">Imie</p>
+                  <div class="input-div">
+                  <svg class="input-svg" width="18px" height="18px">
+                  <use xlink:href="./images/icons.svg#icon-person-black-18dp-1"></use>
+                  </svg>
+                  <input class="modal-input" type="name" name="name" />
+                  </div>
+                </label>
+              <form name="signup_form" autocomplete="on" novalidate>
+                <label>
+                  <p class="modal-p">Telefon</p>
+                  <div class="input-div">
+                  <svg class="input-svg" width="18px" height="18px">
+                  <use xlink:href="./images/icons.svg#icon-phone-black-18dp-1"></use>
+                  </svg>
+                  <input class="modal-input" type="phpne" name="phone" />
+                  </div>
+                </label>
+              <form name="signup_form" autocomplete="on" novalidate>
+                <label>
+                  <p class="modal-p">Email</p>
+                  <div class="input-div">
+                  <input class="modal-input" type="email" name="email" />
+                  <svg class="input-svg" width="18px" height="18px">
+                  <use xlink:href="./images/icons.svg#icon-email-black-18dp-1"></use>
+                  </svg>
+                  </div>
+                </label>
+                <label>
+                  <p class="modal-p">Komentarz</p>
+                  <div class="modal-textarea">
+                  <textarea class="modal-in-textarea" name="feedback" placeholder="Wprowadź tekst"></textarea>
+                  </div>
+                </label>
+                <div class="policy">
+                <svg class="policy-svg" width="16px" height="15px">
+                <use xlink:href="./images/icons.svg#icon-Vector-2"></use>
+                </svg>
+                <p class="policy-window">Oświadczam iż akceptuję&nbsp<a href="/">Regulamin</a>&nbspi&nbsp<a href="/">Politykę Prywatności</a>.</p>
+                </div>
+                <button class="modal-button-2" type="submit">Wyślij</button>
+              </form>
+            </div>
       </div>
     </div>
     <script src="./js/modal.js"></script>
