--- a/index.html
+++ b/index.html
@@ -417,17 +417,15 @@
                   <input class="modal-input" type="name" name="name" />
                   </div>
                 </label>
-              <form name="signup_form" autocomplete="on" novalidate>
                 <label>
                   <p class="modal-p">Telefon</p>
                   <div class="input-div">
                   <svg class="input-svg" width="18px" height="18px">
                   <use xlink:href="./images/icons.svg#icon-phone-black-18dp-1"></use>
                   </svg>
-                  <input class="modal-input" type="phpne" name="phone" />
+                  <input class="modal-input" type="phone" name="phone" />
                   </div>
                 </label>
-              <form name="signup_form" autocomplete="on" novalidate>
                 <label>
                   <p class="modal-p">Email</p>
                   <div class="input-div">
@@ -443,14 +441,18 @@
                   <textarea class="modal-in-textarea" name="feedback" placeholder="Wprowadź tekst"></textarea>
                   </div>
                 </label>
-                <div class="policy">
-                <svg class="policy-svg" width="16px" height="15px">
-                <use xlink:href="./images/icons.svg#icon-Vector-2"></use>
-                </svg>
-                <p class="policy-window">Oświadczam iż akceptuję&nbsp<a href="/">Regulamin</a>&nbspi&nbsp<a href="/">Politykę Prywatności</a>.</p>
-                </div>
+                <label>
+                 <input class="policy-window" type="checkbox" name="policy-checkbox" width="16px" height="15px" />
+                 <span class="policy-checkbox"> 
+                 <svg class="policy-svg" width="16px" height="15px">
+                    <use xlink:href="./images/icons.svg#icon-check-1"></use>
+                  </svg>
+                 </span>
+                 <p class="policy-text">Oświadczam iż akceptuję&nbsp<a href="/">Regulamin</a>&nbspi&nbsp<a href="/">Politykę Prywatności</a>.</p>
+                </label>
                 <button class="modal-button-2" type="submit">Wyślij</button>
               </form>
+            </form>
             </div>
       </div>
     </div>
