--- a/index.html
+++ b/index.html
@@ -442,10 +442,10 @@
                   </div>
                 </label>
                 <label>
-                 <input class="policy-window" type="checkbox" name="policy-checkbox" width="16px" height="15px" />
-                 <span class="policy-checkbox"> 
+                 <input class="policy-window" type="checkbox" name="policy-checkbox" />
+                 <span> 
                  <svg class="policy-svg" width="16px" height="15px">
-                    <use xlink:href="./images/icons.svg#icon-check-1"></use>
+                    <use xlink:href="./images/icons.svg#icon-checkbox"></use>
                   </svg>
                  </span>
                  <p class="policy-text">Oświadczam iż akceptuję&nbsp<a href="/">Regulamin</a>&nbspi&nbsp<a href="/">Politykę Prywatności</a>.</p>
